Fix setting pixel format to AVFVideoSink

- When lazy loading the video, the output settings dictionary was invalid.
Properly initialize and release m_outputSettings to fix.

- Unify and refactor code to set the output settings and pixel format

- Set the pixel format only once rhi is set on the sink so we know the
rhi backend. This is because the openGL backend accepts only RGBA pixel
format.

- Fix the incorrect assigning of a QVideoFrameFormat::PixelFormat to
avPixelFormat when the rhi was openGL.

Fixes: QTBUG-110868
Fixes: QTBUG-110812
Change-Id: I98de219bcc94dad04c4db9ea22aeb852dc2a193b
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 2e43d29e1d5d50b44b8f6d4f000968e3933c279a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>